# VA53_kalman

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: Detector.cpp  Detector.hpp  DetectorDebugger.cpp  DetectorDebugger.hpp  IDetector.hpp  KalmanFilterBuilder.cpp  KalmanFilterBuilder.hpp  Utils.hpp  main.cpp
